--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!--NAVBAR-->
     <nav class="nabvar">
         <a href="#">INICIO</a>
-        <a href="/public/views/nuestrostrabajos.html">TRABAJOS REALIZADOS</a>
-        <a href="public/views/formu.html">FORMULARIO DE REGISTRO</a>
+        <a href="./public/views/nuestrostrabajos.html">TRABAJOS REALIZADOS</a>
+        <a href="./public/views/formu.html">FORMULARIO DE REGISTRO</a>
     </nav>
     
     <!--PARTE PRINCIPAL-->
